Fix: Spacing on sessions

--- a/client/src/components/DisplaySession/DisplayMySession/DisplayMySession.module.css
+++ b/client/src/components/DisplaySession/DisplayMySession/DisplayMySession.module.css
@@ -480,7 +480,7 @@
     flex-direction: column;
     gap: 1rem;
     padding: 1rem 1rem 0.5rem;
-    margin-bottom: 5rem;
+    margin-bottom: 0rem;
   }
 
   .forecastGrid {
